k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biologia-lms-apirest-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biologia-lms-apirest-app
  template:
    metadata:
      labels:
        app: biologia-lms-apirest-app
    spec:
      serviceAccountName: biologia-lms-apirest-sa
      containers:
        - name: biologia-lms-apirest-container
          image: 365227208102.dkr.ecr.us-east-2.amazonaws.com/biologia-lms-apirest:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: '256Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '200m'
